# cvxpylayers

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: build.yml  docs.yml
cvxpylayers/: utils.py
cvxpylayers/interfaces/: __init__.py  mpax_if.py
cvxpylayers/jax/: __init__.py  cvxpylayer.py  test_cvxpylayer.py  test_gpucvxpylayer.py
cvxpylayers/mlx/: __init__.py  cvxpylayer.py  test_cvxpylayer.py
cvxpylayers/solver_interfaces/: __init__.py  mpax_if.py
cvxpylayers/utils/: parse_args.py
docs/: conf.py  index.md  installation.md  quickstart.md
docs/_static/: custom.css
docs/examples/: index.md
docs/guide/: dual-variables.md  solvers.md
docs/src/: conf.py
docs/src/examples/: quadratic_program.ipynb
examples/: prof-plots.ipynb  prof.py
examples/jax/: README.md  jax_example.py  run_example.sh  tutorial.ipynb
examples/jax/batching/: README.md  batching.py
examples/jax/hello_world/: README.md  hello_world.py
examples/jax/lqr/: README.md  lqr.py
examples/jax/optimal_transport/: README.md  optimal_transport.py
examples/jax/signal_denoising/: README.md  signal_denoising.py
examples/tf/: data_poisoning_attack.ipynb  optimizing_stiffness_constants.ipynb
examples/torch/: Portfolio optimization with vix.ipynb  README.md  ReLU Layers.ipynb  algorithms.py  batched_portfolio.ipynb  constrained_lqr.ipynb  constrained_mpc.ipynb  convex_approximate_dynamic_programming.ipynb  convex_regression.ipynb  data_poisoning_attack.ipynb  gp_circuit_sizing.ipynb  lqr.ipynb  markowitz_tuning.ipynb  monotonic_output_regression.ipynb  optimal_transport.ipynb  optimizing_stiffness_constants.ipynb  predict_then_optimize.ipynb  resource_allocation.ipynb  robust_optimization.ipynb  signal_denoising.ipynb  supply_chain.ipynb  torch_example.py  tutorial.ipynb  vehicle.ipynb
examples/torch/batching/: README.md  batching.py
examples/torch/hello_world/: README.md  hello_world.py
examples/torch/lqr/: README.md  lqr.py
examples/torch/optimal_transport/: README.md  optimal_transport.py
examples/torch/signal_denoising/: README.md  signal_denoising.py
src/cvxpylayers/: __init__.py  _quad_form_dpp.py
src/cvxpylayers/interfaces/: __init__.py  base.py  cuclarabel_if.py  cuopt_if.py  custom_if.py  diffcp_if.py  diffqcp_if.py  moreau_if.py  mpax_if.py
src/cvxpylayers/jax/: cvxpylayer.py
src/cvxpylayers/mlx/: cvxpylayer.py
src/cvxpylayers/tensorflow/: __init__.py  cvxpylayer.py
src/cvxpylayers/torch/: __init__.py  cvxpylayer.py
src/cvxpylayers/utils/: parse_args.py  solver_utils.py
tests/: __init__.py  ruff.toml  test_cuclarabel.py  test_cuopt.py  test_custom_solver.py  test_diffcp_optional_deps.py  test_diffqcp.py  test_dual_variables.py  test_dual_variables_jax.py  test_dual_variables_mlx.py  test_jax.py  test_mlx.py  test_moreau.py  test_moreau_dual_variables.py  test_moreau_if.py  test_mpax.py  test_parse_args.py  test_quad_form_param.py  test_scratch.py  test_tensorflow.py  test_torch.py
